# wilddet3d-inference

./: .gitignore  README.md  pyproject.toml
examples/: basic.py  webcam_rerun.py
scripts/: download_checkpoint.py
tests/: test_imports.py
wilddet3d_inference/: __init__.py  benchmark.py  cli.py  device.py  inference.py  intrinsics.py  patches.py  quantize.py  visualize.py
